oxiplate-derive/tests/broken/whitespace/replace-no-whitespace-writ.stderr
error: Whitespace replace character `_` used before non-whitespace. Either add whitespace or change how whitespace is handled after this tag.
 --> tests/broken/whitespace/replace-no-whitespace-writ.rs:6:14
  |
6 | {{ "replace" _}}{{_ "replace" }}
  |              ^^^

error: Whitespace replace character `_` used after non-whitespace. Either add whitespace or change how whitespace is handled before this tag.
 --> tests/broken/whitespace/replace-no-whitespace-writ.rs:6:17
  |
6 | {{ "replace" _}}{{_ "replace" }}
  |                 ^^^

error: Whitespace replace character `_` used before non-whitespace. Either add whitespace or change how whitespace is handled after this tag.
 --> tests/broken/whitespace/replace-no-whitespace-writ.rs:7:14
  |
7 | {{ "replace" _}}{{ "preserve" }}
  |              ^^^

error: Whitespace replace character `_` used after non-whitespace. Either add whitespace or change how whitespace is handled before this tag.
 --> tests/broken/whitespace/replace-no-whitespace-writ.rs:8:17
  |
8 | {{ "preserve" }}{{_ "replace" }}
  |                 ^^^
